cleaned and added logs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   local_auth: ^2.2.0
   package_info_plus: ^8.0.0
   json_annotation: ^4.8.1
+  simple_logger: ^1.10.0
 
 dev_dependencies:
   flutter_test:
