--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   # UI
   google_fonts: ^6.2.0
   flutter_svg: ^2.0.10+1
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
