--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,11 @@ dependencies:
   go_router: ^10.1.2 # Or your preferred router
 
   # Utilities
-  intl: ^0.18.1 # For date formatting
+  intl: ^0.20.0 # For date formatting
   uuid: ^4.1.0 # For generating unique IDs
   dartz: ^0.10.1
   fl_chart: ^0.64.0
+  url_launcher: ^6.3.1
 
   # Settings
   shared_preferences: ^2.2.2
@@ -45,6 +46,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_animate: ^4.5.0
   flutter_colorpicker: ^1.1.0
+  table_calendar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
