--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_animate: ^4.5.0
   flutter_colorpicker: ^1.1.0
   table_calendar: ^3.1.0
+  toggle_switch: ^2.3.0
 
 dev_dependencies:
   flutter_test:
