--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dartz: ^0.10.1
   fl_chart: ^0.64.0
   url_launcher: ^6.3.1
+  multi_select_flutter: ^4.1.3
 
   # Settings
   shared_preferences: ^2.2.2
@@ -48,6 +49,8 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   table_calendar: ^3.1.0
   toggle_switch: ^2.3.0
+  percent_indicator: ^4.2.4
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
