--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,13 @@
 include: package:flutter_lints/flutter.yaml
+
+analyzer:
+  errors:
+    deprecated_member_use: ignore
+    use_build_context_synchronously: ignore
+    prefer_const_declarations: ignore
+    prefer_const_literals_to_create_immutables: ignore
+    unused_import: ignore
+    unnecessary_import: ignore
+    unused_local_variable: ignore
+    curly_braces_in_flow_control_structures: ignore
+    prefer_const_constructors: ignore
