--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   # State Management
   flutter_bloc: ^8.1.3
+  bloc: ^8.1.3
   equatable: ^2.0.5 # For value equality in Blocs/Entities
 
   # Local Storage
