--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   percent_indicator: ^4.2.4
   confetti: ^0.7.0
   fl_chart: ^0.68.0
+  window_manager: ^0.3.7
 
 
 dev_dependencies:
