--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
   csv: ^6.0.0
+  encrypt: ^5.0.1
+  share_plus: ^7.2.1
+  crypto: ^3.0.3
 
   # Settings
   shared_preferences: ^2.2.2
