--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
 
   # State Management
@@ -72,6 +74,7 @@ dev_dependencies:
   mocktail: ^1.0.1 # Mocking library
 
 flutter:
+  generate: true
   uses-material-design: true
 
   assets:
