--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   go_router: ^10.1.2 # Or your preferred router
 
   # Utilities
-  intl: ^0.20.0 # For date formatting
+  intl: 0.19.0 # For date formatting
   uuid: ^4.1.0 # For generating unique IDs
   dartz: ^0.10.1
   url_launcher: ^6.3.1
@@ -40,6 +40,7 @@ dependencies:
   csv: ^6.0.0
   encrypt: ^5.0.1
   share_plus: ^7.2.1
+  cross_file: ^0.3.3+1
   crypto: ^3.0.3
 
   # Settings
