--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -54,10 +54,7 @@ jobs:
         run: flutter analyze
 
       - name: Unit tests
-        run: flutter test test/unit --test-randomize-ordering-seed=random --concurrency 4
-
-      - name: Widget tests + coverage
-        run: flutter test test/widget --coverage --test-randomize-ordering-seed=random --concurrency 4
+        run: flutter test test/ --test-randomize-ordering-seed=random --concurrency 4
 
       - name: Enforce 90% coverage
         run: |
