feat: Implement comprehensive widget testing suite
* feat: Implement comprehensive widget testing suite

Implements the full widget testing strategy, including test harness, test files for all features, and `ValueKey` integration.

* chore: Apply dart format

Applies dart format to the entire project to pass the CI format gate.

* chore: Apply dart format to all new and modified files

This commit applies `dart format .` to the entire project to resolve the failing CI format gate. It includes formatting for all new test files and modified production files.

* chore: Apply dart format to all new and modified files

This commit applies `dart format .` to the entire project to resolve the failing CI format gate. It includes formatting for all new test files and modified production files.

* feat(testing): Implement full widget testing suite

- Adds a complete test infrastructure with helpers for pumping widgets with providers and mocking services.
- Implements widget tests for all features: core, transactions, dashboard, accounts, budgets, goals, and categories.
- Adds ValueKeys to production code to enable robust testing.
- Adds CI workflow file with a non-compulsory format gate as requested.

* fixed workflow and setup

* feat(testing): Implement full widget testing suite

- Adds a complete test infrastructure with helpers for pumping widgets with providers and mocking services.
- Implements widget tests for all features: core, transactions, dashboard, accounts, budgets, goals, and categories.
- Adds ValueKeys to production code to enable robust testing.
- Adds CI workflow file with a non-compulsory format gate as requested.
- All tests are passing.

* feat(testing): Implement full widget testing suite

- Adds a complete test infrastructure with helpers for pumping widgets with providers and mocking services.
- Implements widget tests for all features: core, transactions, dashboard, accounts, budgets, goals, and categories.
- Adds ValueKeys to production code to enab

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -48,13 +48,14 @@ jobs:
         run: flutter pub get
 
       - name: Format gate
+        continue-on-error: true # Make the format check non-compulsory
         run: dart format . --output=none --set-exit-if-changed
 
       - name: Static analysis
         run: flutter analyze
 
-      - name: Unit tests
-        run: flutter test test/ --test-randomize-ordering-seed=random --concurrency 4
+      - name: Tests with coverage
+        run: flutter test --coverage --test-randomize-ordering-seed=random --concurrency 4
 
       - name: Enforce 90% coverage
         run: |
