--- a/nginx.conf
+++ b/nginx.conf
@@ -5,20 +5,26 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # Flutter web: prevent 404 on refresh for routes
   location / {
     try_files $uri $uri/ /index.html;
   }
 
-  # Cache static assets aggressively
-  location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|map)$ {
+  # Cache fonts and images aggressively (immutable)
+  location ~* \.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|map)$ {
     try_files $uri =404;
     expires 30d;
     add_header Cache-Control "public, max-age=2592000, immutable";
   }
 
-  # Don't cache the main HTML (so new deploy shows immediately)
-  location = /index.html {
+  # JS and CSS - Do not use immutable to avoid stale unversioned files
+  location ~* \.(js|css)$ {
+    try_files $uri =404;
+    expires 1d;
+    add_header Cache-Control "public, max-age=86400";
+  }
+
+  # Critical entry points - validaton required (no cache)
+  location ~* ^/(index\.html|flutter\.js|main\.dart\.js|flutter_service_worker\.js)$ {
     add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
     expires -1;
   }
