Reorder nginx.conf to prioritize no-cache rules for critical entry points

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,13 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
+  # Critical entry points - validaton required (no cache)
+  # Placed FIRST to take precedence over generic JS/CSS regex
+  location ~* ^/(index\.html|flutter\.js|main\.dart\.js|flutter_service_worker\.js)$ {
+    add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+    expires -1;
+  }
+
   # Cache fonts and images aggressively (immutable)
   location ~* \.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|map)$ {
     try_files $uri =404;
@@ -21,11 +28,5 @@ server {
     try_files $uri =404;
     expires 1d;
     add_header Cache-Control "public, max-age=86400";
-  }
-
-  # Critical entry points - validaton required (no cache)
-  location ~* ^/(index\.html|flutter\.js|main\.dart\.js|flutter_service_worker\.js)$ {
-    add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
-    expires -1;
   }
 }
