Fix CI order and web build command

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -53,6 +53,9 @@ jobs:
       - name: flutter pub get
         run: flutter pub get
 
+      - name: Build Runner (Generate code)
+        run: dart run build_runner build --delete-conflicting-outputs
+
       - name: Format gate
         run: dart format . --output=none --set-exit-if-changed
 
@@ -64,7 +67,7 @@ jobs:
 
       - name: Enforce 35% coverage
         run: |
-          awk -F: '/^LF:/{lf+=$2} /^LH:/{lh+=$2} END{ pct=(lf?100*lh/lf:0); printf("Coverage: %.2f%%\n", pct); if (pct<35) { print "Coverage below 35%!"; exit 1 } }' coverage/lcov.info
+          awk -F: '/^LF:/{lf+=$2} /^LH:/{lh+=$2} END{ pct=(lf?100*lh/lf:0); printf("Coverage: %.2f%%\n", pct); if (pct<35) { print "Coverage below 35%!"; exit(1) } }' coverage/lcov.info
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
@@ -74,4 +77,4 @@ jobs:
           retention-days: 5
 
       - name: Build Web
-        run: flutter build web --release
+        run: flutter build web --release --no-wasm-dry-run
