--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   confetti: ^0.7.0
   fl_chart: ^0.68.0
   bloc_concurrency: ^0.3.0
+  supabase_flutter: ^2.12.0
+  flutter_secure_storage: ^10.0.0
+  app_links: ^6.4.1
+  connectivity_plus: ^7.0.0
 
 
 dev_dependencies:
