feat(ci): harden and improve smoke tests
- Add `extract_routes.js` to auto-discover routes from `RouteNames`.
- Rewrite `run_smoke.js` with Playwright for robust testing:
  - Startup time measurement.
  - Setup bypass logic.
  - Retry mechanism.
  - Artifact capture (screenshots, traces).
  - Detailed reporting.
- Update `package.json` to include extraction step.
- Update `flutter-ci.yml` to upload artifacts.
- Update `generate_pr_comment.js` to show detailed smoke test results.
- Add CI artifacts to `.gitignore`.

--- a/ci/smoke/package.json
+++ b/ci/smoke/package.json
@@ -2,7 +2,8 @@
   "name": "smoke-tests",
   "version": "1.0.0",
   "scripts": {
-    "smoke": "node run_smoke.js"
+    "extract-routes": "node extract_routes.js",
+    "smoke": "npm run extract-routes && node run_smoke.js"
   },
   "dependencies": {
     "playwright": "^1.40.0",
