--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -209,12 +209,14 @@ jobs:
         working-directory: ci/smoke
         run: npm run smoke
 
-      - name: Upload Smoke Report
+      - name: Upload Smoke Artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: smoke-test
-          path: ci/smoke/smoke-report.json
+          path: |
+            ci/smoke/smoke-report.json
+            ci/smoke/artifacts/
           retention-days: 1
 
   pr-report:
