fix(deploy): update nginx config for wasm and dockerfile for supabase args

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,8 +16,8 @@ server {
     expires -1;
   }
 
-  # Cache fonts and images aggressively (immutable)
-  location ~* \.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|map)$ {
+  # Cache fonts, images, and WASM aggressively (immutable)
+  location ~* \.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|map|wasm)$ {
     try_files $uri =404;
     expires 30d;
     add_header Cache-Control "public, max-age=2592000, immutable";
