fix(ci/deployment): Rebase on main, resolve conflicts, and fix Render deployment

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,15 @@
 .git
-.github
 .gitignore
-.vscode
+.dockerignore
+.dart_tool/
 build/
-doc/
+.idea/
+.vscode/
+android/
+ios/
+linux/
+macos/
+windows/
 test/
 coverage/
+*.md
