--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -116,11 +116,11 @@ jobs:
         run: flutter test --coverage --test-randomize-ordering-seed=random --concurrency 4
 
       - name: Install diff-cover
-        if: github.event_name == 'pull_request'
+        if: always() && github.event_name == 'pull_request'
         run: pip install diff-cover
 
       - name: Check Diff Coverage (80%)
-        if: github.event_name == 'pull_request'
+        if: always() && github.event_name == 'pull_request'
         run: |
           git fetch origin ${{ github.base_ref }} || true
           diff-cover coverage/lcov.info --compare-branch=origin/${{ github.base_ref }} --fail-under=80
@@ -130,6 +130,7 @@ jobs:
           awk -F: '/^LF:/{lf+=$2} /^LH:/{lh+=$2} END{ pct=(lf?100*lh/lf:0); printf("Coverage: %.2f%%\n", pct); if (pct<35) { print "Coverage below 35%!"; exit 1 } }' coverage/lcov.info
 
       - name: Upload Coverage Artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: coverage
@@ -195,8 +196,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
           cache-dependency-path: ci/smoke/package.json
 
       - name: Install Playwright Deps
