fixes for the CI Quality Report
The report now accurately captures:

Flutter Version: Correctly reported via metadata export.
Git Impact Analytics: Accurate file counts and "Tests Added" metrics by leveraging full repository history.
Refined Status Logic: The overall status now intelligently distinguishes between Success (Stellar score, no failures), Attention Needed (Warnings like low diff coverage or flaky tests), and Issues Found (Hard job failures or critical score drops).
Debug Traceability: Added detailed console logs to the reporting script to make future troubleshooting seamless.

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -67,8 +67,20 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Analyze
+      - name: Run Static Analysis
         run: flutter analyze
+
+      - name: Export Metadata
+        run: |
+          mkdir -p metadata
+          flutter --version > metadata/flutter-version.txt
+
+      - name: Upload Metadata
+        uses: actions/upload-artifact@v4
+        with:
+          name: metadata
+          path: metadata/
+          retention-days: 1
 
       - name: Policy Check (No Print/TODO)
         if: github.event_name == 'pull_request'
@@ -239,6 +251,8 @@ jobs:
     needs: [static-checks, unit-tests, web-build, web-smoke]
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Download All Artifacts
         uses: actions/download-artifact@v4
