fixed rebased and fixed issues with

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ ci/smoke/node_modules/
 ci/smoke/artifacts/
 ci/smoke/smoke-report.json
 ci/smoke/routes.json
+# Environment variables
+.env
+.env.*
