--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   http: ^1.6.0
   flutter_timezone: ^5.0.1
   image_picker: ^1.2.1
+  flutter_image_compress: ^2.3.0
   country_code_picker: ^3.4.1
   rxdart: ^0.28.0
   windows_single_instance: ^1.1.0
