fix(ci): improve test coverage for Phase 3C features
- Added unit/widget tests for UpiService, SettlementDialog, and ProfileSetupPage.
- Updated UserProfile and ProfileModel tests to include upiId.
- Updated ProfileRemoteDataSource tests.
- Fixed dependency issues in tests by adding plugin_platform_interface and url_launcher_platform_interface to dev_dependencies.
- Ensured tests pass locally.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ dev_dependencies:
   bloc_test: ^10.0.0 # For testing Blocs
   mocktail: ^1.0.1 # Mocking library
   faker: ^2.1.0 # For generating mock data
+  plugin_platform_interface: ^2.1.8
+  url_launcher_platform_interface: ^2.3.2
 
 flutter:
   generate: true
