--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.3.1
   multi_select_flutter: ^4.1.3
   collection: ^1.18.0
+  path: ^1.9.0
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
   csv: ^6.0.0
