--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.3.1
   multi_select_flutter: ^4.1.3
   collection: ^1.18.0
+  path: ^1.9.0
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
   csv: ^6.0.0
@@ -69,6 +70,7 @@ dependencies:
   http: ^1.6.0
   flutter_timezone: ^5.0.1
   image_picker: ^1.2.1
+  flutter_image_compress: ^2.3.0
   country_code_picker: ^3.4.1
   rxdart: ^0.28.0
   windows_single_instance: ^1.1.0
