--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,14 @@
 include: package:flutter_lints/flutter.yaml
 
+linter:
+  rules:
+    prefer_const_constructors: false
+    prefer_const_literals_to_create_immutables: false
+    prefer_final_fields: false
+    use_key_in_widget_constructors: false
+    avoid_print: false
+    use_build_context_synchronously: false
+
 analyzer:
   errors:
     deprecated_member_use: ignore
